[tool.poetry]
name = "test-abismal-torch"
version = "0.1.0"
description = ""
authors = ["DorisMai <maihuanghao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
numpy = "^2.1.1"
lightning = "^2.4.0"
reciprocalspaceship = "^1.0.2"
gemmi = "0.6.6"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
sphinx = "^8.0.2"
pytest-cov = "^5.0.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
